<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/FirstFragment">

    <fragment
        android:id="@+id/FirstFragment"
        android:name="io.bitdrift.gradletestapp.ui.fragments.FirstFragment"
        android:label="@string/first_fragment_label">

        <action
            android:id="@+id/action_FirstFragment_to_SecondFragment"
            app:destination="@id/SecondFragment" />
        <action
            android:id="@+id/action_FirstFragment_to_ConfigFragment"
            app:destination="@id/ConfigurationSettingsFragment" />

        <action
            android:id="@+id/action_FirstFragment_to_WebViewFragment"
            app:destination="@id/WebViewFragment" />
    </fragment>
    <fragment
        android:id="@+id/SecondFragment"
        android:name="io.bitdrift.gradletestapp.ui.fragments.SecondFragment"
        android:label="@string/second_fragment_label"
        tools:layout="@layout/fragment_second">

        <action
            android:id="@+id/action_SecondFragment_to_FirstFragment"
            app:destination="@id/FirstFragment" />
    </fragment>
    <fragment
        android:id="@+id/ConfigurationSettingsFragment"
        android:name="io.bitdrift.gradletestapp.ui.fragments.ConfigurationSettingsFragment"
        android:label="@string/config_fragment_label">
    </fragment>

    <fragment
        android:id="@+id/WebViewFragment"
        android:name="io.bitdrift.gradletestapp.ui.fragments.WebViewFragment"
        android:label="@string/web_view_fragment_label"
        tools:layout="@layout/fragment_web_view">

        <action
            android:id="@+id/action_FirstFragment_to_WebViewFragment"
            app:destination="@id/WebViewFragment" />
        <action
            android:id="@+id/action_WebViewFragment_to_FirstFragment"
            app:destination="@id/FirstFragment" />
    </fragment>

    <fragment
        android:id="@+id/action_FirstFragment_to_XmlFragment"
        android:name="io.bitdrift.gradletestapp.ui.fragments.XmlDemoFragment"
        android:label="XML Demo"
        tools:layout="@layout/fragment_xml_demo" />

</navigation>
