<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:divider="@drawable/empty_tall_divider"
        android:showDividers="middle"
        tools:context=".FirstFragment">

        <Button
            android:id="@+id/btnNavigateConfiguration"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/navigate_config" />

        <include layout="@layout/divider" />

        <androidx.compose.ui.platform.ComposeView
            android:id="@+id/compose_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/textview_second"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/compat_multiline_txt" />

        <TextView
            android:id="@+id/textview_first"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <include layout="@layout/divider" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnCopySessionUrl"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:text="Copy Session URL"
                android:textAlignment="center" />

            <Button
                android:id="@+id/btnStartNewSession"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:text="Start New Session"
                android:textAlignment="center" />
        </LinearLayout>

        <Button
            android:id="@+id/btnTempDeviceCode"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Generate Temporary Device Code"
            android:textAlignment="center"
            android:layout_margin="2dp" />

        <TextView
            android:id="@+id/deviceCodeTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:text="No Code Generated" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <include layout="@layout/divider" />

            <Spinner
                android:id="@+id/spnAppExitOptions"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <Button
                android:id="@+id/btnAppExit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_exit"
                app:icon="@android:drawable/ic_delete" />
        </LinearLayout>

        <include layout="@layout/divider" />

        <Button
            android:id="@+id/btnOkHttpRequest"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="3dp"
            android:text="@string/okhttp"
            app:icon="@android:drawable/ic_menu_send" />

        <Button
            android:id="@+id/btnGraphQlRequest"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="3dp"
            android:text="@string/graphql"
            app:icon="@android:drawable/ic_menu_send" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <include layout="@layout/divider" />

            <Spinner
                android:id="@+id/logLevelItems"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <Button
                android:id="@+id/btnLogMessage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/log_msg"
                app:icon="@android:drawable/ic_menu_upload" />
        </LinearLayout>

        <include layout="@layout/divider" />

        <Button
            android:id="@+id/btnNavigateToWebView"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/navigate_to_web_view"
            app:icon="@android:drawable/ic_menu_info_details"/>

        <include layout="@layout/divider" />

        <Button
            android:id="@+id/btnNavigateCompose"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/navigate_second" />

    </LinearLayout>
</ScrollView>